--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ em{
 	padding-left:10px;
 	padding-bottom:20px;
 }
-#kayıt{
+#kayit{
 	padding-top:20px;
 	padding-right:20px;
 	padding-left:10px;
